feat: add module auth
