# internal/modules/auth/handler/dto.go
@@ -1,0 +1,11 @@
+package handler
+
+type LoginDTO struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type RegisterDTO struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
